<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/createΑΝewΑccount"
            android:textAlignment="center"
            android:background="@color/colorPrimaryDark"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#fff"
            tools:layout_editor_absoluteX="175dp"
            tools:layout_editor_absoluteY="40dp" />

        <EditText
            android:id="@+id/textview_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="103dp"
            tools:layout_editor_absoluteY="107dp" />

        <EditText
            android:id="@+id/textview_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="103dp"
            tools:layout_editor_absoluteY="189dp" />

        <EditText
            android:id="@+id/textview_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="103dp"
            tools:layout_editor_absoluteY="274dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/button_register"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="30dp"
            android:textColor="#fff">

        </Button>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>